--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,46 @@
 ---
 const { footerText } = Astro.props;
+
+import gsapUrl from "../scripts/libs/gsap.js?url";
+import gsapFlipUrl from "../scripts/libs/gsap-flip.js?url";
+import scrollTriggerUrl from "../scripts/libs/scroll-trigger.js?url";
+import splitTextUrl from "../scripts/libs/split-text.js?url";
+import lenisUrl from "../scripts/libs/lenis.js?url";
+import smoothScrollUrl from "../scripts/libs/smooth-scroll.js?url";
+import swiperUrl from "../scripts/libs/swiper.js?url";
+import swupUrl from "../scripts/libs/swup.js?url";
+import swupBodyUrl from "../scripts/libs/swup-body.js?url";
+import swupFragmentUrl from "../scripts/libs/swup-fragment.js?url";
+import swupProgressUrl from "../scripts/libs/swup-progress.js?url";
+
+import vendorUrl from "../scripts/vendor.js?url";
+import animationsUrl from "../scripts/animations.js?url";
+import scriptUrl from "../scripts/script.js?url";
+import cookieConsentUrl from "../scripts/cookieconsent.js?url";
+import cookieConsentInitUrl from "../scripts/cookieconsent-init.js?url";
 ---
 
 <footer class="mt-12 text-sm text-[var(--muted)]">{footerText}</footer>
+
+<script src={gsapUrl} defer></script>
+<script src={scrollTriggerUrl} defer></script>
+<script src={splitTextUrl} defer></script>
+<script src={lenisUrl} defer></script>
+
+<script src={swiperUrl} defer></script>
+
+<script src={vendorUrl} defer></script>
+<script src={animationsUrl} defer></script>
+<script src={scriptUrl} defer></script>
+<script is:inline>
+  const runApp = () => {
+    if (typeof appMain === "function") appMain();
+    if (typeof animationMain === "function") animationMain();
+  };
+
+  if (document.readyState === "complete") {
+    runApp();
+  } else {
+    window.addEventListener("load", runApp, { once: true });
+  }
+</script>
