--- a/src/pages/kontakt/index.astro
+++ b/src/pages/kontakt/index.astro
@@ -3,11 +3,11 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 const contact = {
   title: "Kontakt",
-  lead: "Napisz albo zadzwoń i opowiedz o projekcie. Wroce z odpowiedzia w 24-48h.",
-  email: "kontakt@twojadomena.pl",
-  phone: "+48 123 456 789",
-  address: "ul. Przykladowa 12, 00-000 Miasto",
-  hours: "Pn-Pt 9:00-17:00",
+  lead: "Napisz albo zadzwoń i opowiedz o projekcie. Wrócę z odpowiedzią w 24-48h.",
+  email: "kontakt@przemekmiros.pl",
+  phone: "+48 788 660 190",
+  address: "ul Orzeszkowej 5, 05-660 Warka",
+  hours: "Pn - Pt: 9.00-17.00",
   mapUrl: "https://maps.google.com/?q=Przykladowa+12+Miasto",
 };
 ---
