--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const linkClass = (href) =>
 	>
 		<a href="/" class="text-[var(--text)] no-underline" aria-label="Logo">
 			<svg
-				class="h-12 w-auto text-[var(--text)]"
+				class="h-9 w-auto text-[var(--text)] sm:h-12"
 				viewBox="0 0 971 234"
 				fill="none"
 				xmlns="http://www.w3.org/2000/svg"
