--- a/src/pages/artykuly/[slug].astro
+++ b/src/pages/artykuly/[slug].astro
@@ -62,7 +62,7 @@ if (!artykul) {
       </div>
       {headerImage ? (
         <Image
-          class="aspect-[16/9] mx-auto w-5xl rounded-3xl border border-[var(--border)] object-cover shadow-[0_18px_40px_-30px_rgba(0,0,0,0.6)]"
+          class="aspect-[16/9] mx-auto w-5xl rounded-3xl border border-[var(--border)] object-cover"
           src={headerImage}
           alt={artykul.title ?? artykul.slug}
           widths={[480, 768, 960, 1100, 1400, 1680]}
