--- a/src/components/home/BentoGrid.astro
+++ b/src/components/home/BentoGrid.astro
@@ -20,7 +20,7 @@ import securityImage from "../../assets/images/sections/dark-bento-03-security.p
             <div class="absolute inset-x-10 top-10 bottom-0 overflow-hidden rounded-t-[12cqw] border-x-[3cqw] border-t-[3cqw] border-[var(--border)] bg-[var(--surface-muted)] outline outline-[var(--border)]">
               <Image
                 src={mobileImage}
-                alt=""
+                alt="Podglad strony na ekranie telefonu"
                 class="size-full object-cover object-top"
                 widths={[320, 480, 768]}
                 sizes="(max-width: 1024px) 100vw, 420px"
@@ -41,7 +41,7 @@ import securityImage from "../../assets/images/sections/dark-bento-03-security.p
           <div class="flex flex-1 items-center justify-center px-8 max-lg:pt-10 max-lg:pb-12 sm:px-10 lg:pb-2">
             <Image
               src={performanceImage}
-              alt=""
+              alt="Wykres szybkosci i wydajnosci"
               class="w-full max-lg:max-w-xs"
               widths={[320, 480, 768]}
               sizes="(max-width: 1024px) 100vw, 420px"
@@ -61,7 +61,7 @@ import securityImage from "../../assets/images/sections/dark-bento-03-security.p
           <div class="@container flex flex-1 items-center max-lg:py-6 lg:pb-2">
             <Image
               src={securityImage}
-              alt=""
+              alt="Ikona tarczy bezpieczenstwa"
               class="h-[min(152px,40cqw)] object-cover"
               widths={[240, 360, 480]}
               sizes="(max-width: 1024px) 100vw, 300px"
