--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,8 @@ import Footer from "../components/Footer.astro";
 import { WebVitals } from "@casoon/astro-webvitals";
 import "../styles/global.css";
 import ogImage from "../assets/images/opengraph/opengraph.png";
+import faviconSvg from "../assets/images/global/favicon.svg";
+import faviconPng from "../assets/images/global/favicon.png";
 
 const assets = import.meta.glob("/src/assets/**/*", { eager: true });
 const resolveAsset = (path) => {
@@ -26,8 +28,8 @@ const ogImageUrl = site ? new URL(ogImage.src, site).toString() : ogImage.src;
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/global/favicon.svg" />
-    <link rel="icon" type="image/png" href="/src/assets/images/global/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href={faviconSvg.src} />
+    <link rel="icon" type="image/png" href={faviconPng.src} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
